--- a/package.json
+++ b/package.json
@@ -6,22 +6,12 @@
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
   "unpkg": "dist/plugin.js",
-  "exports": {
-    ".": {
-      "types": "./dist/esm/index.d.ts",
-      "import": "./dist/esm/index.js",
-      "require": "./dist/plugin.cjs.js"
-    }
-  },
   "files": [
     "android/src/main/",
     "android/build.gradle",
     "dist/",
     "ios/Plugin/",
-    "JnhtrCapacitorPluginPrinter.podspec",
-    "LICENSE",
-    "README.md",
-    "CONTRIBUTORS.md"
+    "JnhtrCapacitorPluginPrinter.podspec"
   ],
   "author": "BarisCanYesil (original author), jnhtr (Capacitor 7 upgrade)",
   "license": "MIT",
@@ -47,7 +37,7 @@
     "lint": "npm run eslint && npm run prettier -- --check && npm run swiftlint -- lint",
     "fmt": "npm run eslint -- --fix && npm run prettier -- --write && npm run swiftlint -- --fix --format",
     "eslint": "eslint . --ext ts",
-    "prettier": "prettier \"**/*.{css,html,ts,js}\"",
+    "prettier": "prettier \"**/*.{css,html,ts,js,java}\"",
     "swiftlint": "node-swiftlint",
     "docgen": "docgen --api PrinterPlugin --output-readme README.md --output-json dist/docs.json",
     "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.js",
